<resources>
    <string name="app_name">Mentor Deck</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="city">Kabupaten/Kota</string>
    <string name="password">Kata sandi</string>
    <string name="login">Masuk</string>
    <string name="login_title">Masuk ke akun anda</string>
    <string name="phone_number">Nomor handphone</string>
    <string name="register">Daftar</string>
    <string name="register_title">Mendaftar</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="back">Kembali</string>
    <string name="previous">Sebelumnya</string>
    <string name="exit">Keluar</string>
    <string name="save">Simpan</string>
    <string name="order">Pesan</string>
    <string name="total">Total Harga</string>

    <string name="account">Akun</string>
    <string name="tutor_account">Akun Pengajar</string>
    <string name="address">Alamat</string>

    <string name="payment_method">Metode Pembayaran</string>

    <string name="help">Bantuan</string>
    <string name="help_center">Pusat bantuan</string>

    <string name="profile">Profil</string>

    <string name="edit_profile">Ubah profil</string>

    <string name="edit_photo">Ubah Foto</string>

    <string name="review">Ulasan</string>
    <string name="review_content">Cara mengajar sangat bagus dan mudah dimengerti</string>


    <string name="home_menu">Beranda</string>
    <string name="feed_menu">Feed</string>
    <string name="message_menu">Obrolan</string>
    <string name="history_menu">Riwayat</string>

    <string name="search_hint">Cari</string>
    <string name="favorite">Favorit</string>
    <string name="skip">Lewati</string>

    <string name="top_rated">Rating tertinggi</string>
    <string name="for_you">Untuk kamu</string>

    <string name="see_all">Lihat semua</string>

    <string name="photo">Foto</string>


    <string name="les_fisika">Les Fisika</string>
    <string name="price">Rp. 100.000</string>
    <string name="location">Surabaya</string>
    <string name="rating">5.0</string>
    <string name="review_total">100</string>
    <string name="vertical_line">|</string>

    <string name="search_by_category">Cari di kategori</string>

    <string name="match">Sesuai</string>>
    <string name="lowest">Termurah</string>
    <string name="highest">Termahal</string>

    <string name="matematika">Matematika</string>
    <string name="fisika">Fisika</string>
    <string name="kimia">Kimia</string>
    <string name="biologi">Biologi</string>
    <string name="ekonomi">Ekonomi</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="bahasa_inggris">Bahasa Inggris</string>
    <string name="geologi">Geologi</string>
    <string name="sejarah">Sejarah</string>
    <string name="geografi">Geografi</string>


    <string name="set_variant">Atur waktu</string>
    <string name="duration">1 Jam</string>
    <string name="tutoring_date">6 Juni 2023</string>
    <string name="tutoring_time">10:50</string>
    <string name="tutoring_method">Online</string>

    <string name="comma">,</string>

    <string name="detail_description">Deskripsi</string>
    <string name="detail_description_text">Les Fisika. Les bisa dilaksanakan secara offline untuk area surabaya dan dilaksanakan secara online untuk area diluar surabaya. Pembelajaran yang diterapkan sesuai dengan kurikulum</string>

    <string name="read_more">Baca Selengkapnya</string>
    <string name="hide">Sembunyikan</string>

    <string name="retry">Coba lagi</string>


    <string name="error_not_loaded">Tidak bisa memuat daftar</string>


    <string name="success_alert_title">Berhasil</string>
    <string name="login_alert_message">Berhasil masuk</string>
    <string name="register_alert_message">Registrasi berhasil</string>
    <string name="continue_alert_button">Lanjutkan</string>
    <string name="failed_response_alert_title">Gagal</string>
    <string name="failed_response_alert_message">Gagal mendapatkan respon</string>
    <string name="login_failed_alert_title">Gagal masuk</string>
    <string name="login_failed_alert_message">Email atau kata sandi salah</string>
    <string name="register_failed_alert_title">Registrasi gagal</string>
    <string name="register_failed_alert_message">Email telah digunakan</string>

    <string name="error_name_empty">Masukkan nama anda</string>
    <string name="error_email_empty">Masukkan email anda</string>
    <string name="error_password_empty">Masukkan password anda</string>
    <string name="error_invalid_email_format">Format email tidak valid</string>
    <string name="error_wrong_password_format">Minimal 6 karakter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>