<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="?attr/colorPrimaryVariant">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/favorite"
                android:background="@drawable/ic_round_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/history_search"
                android:layout_width="288dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_searchview"
                android:paddingStart="-10dp"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true"
                android:inputType="text"
                app:iconifiedByDefault="false"
                app:queryBackground="@null"
                app:queryHint="@string/search_hint"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/tv_search_by_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_category"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            style="@style/header1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_search_by_category"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_matematika"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/matematika"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fisika"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fisika"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_kimia"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kimia"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_biologi"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biologi"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ekonomi"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ekonomi"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_geografi"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geografi"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sejarah"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sejarah"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_geologi"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geologi"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_bahasa_indonesia"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bahasa_indonesia"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_bahasa_inggris"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bahasa_inggris"/>


        </com.google.android.material.chip.ChipGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>