<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.mentordeck.ui.home.HomeFragment"
        android:label="@string/home_menu"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/searchFragment"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.capstone.mentordeck.ui.feed.FeedFragment"
        android:label="@string/feed_menu"
        tools:layout="@layout/fragment_feed"/>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.capstone.mentordeck.ui.message.MessageFragment"
        android:label="@string/message_menu"
        tools:layout="@layout/fragment_message"/>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.capstone.mentordeck.ui.history.HistoryFragment"
        android:label="@string/history_menu"
        tools:layout="@layout/fragment_history"/>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.capstone.mentordeck.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />

</navigation>