<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_base"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:cardCornerRadius="8dp"
                android:contentDescription="@string/photo"
                tools:src="@drawable/furimuitehohoemu"/>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/description_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_base"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/les_fisika"
                style="@style/detailTitle"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                style="@style/price"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/location_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_round_location_on"
                    android:contentDescription="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:layout_marginStart="2dp"
                    style="@style/subtitle"
                    app:layout_constraintStart_toEndOf="@+id/iv_location"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rating_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_base">

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/review"
                    android:src="@drawable/ic_round_star"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    style="@style/subtitle"
                    app:layout_constraintStart_toEndOf="@id/iv_star"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/vertical_line"
                    style="@style/subtitle"
                    app:layout_constraintStart_toEndOf="@id/rating"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/review_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review_total"
                    style="@style/subtitle"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    app:layout_constraintStart_toEndOf="@id/tv_separator"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/review"
                    style="@style/subtitle"
                    app:layout_constraintStart_toEndOf="@id/review_total"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/left_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_overlay_black">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/skip"
            android:src="@drawable/ic_round_clear"
            android:layout_gravity="center"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/right_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_overlay_black">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_round_favorite"
            android:contentDescription="@string/favorite"
            android:layout_gravity="center"/>

    </FrameLayout>

</androidx.cardview.widget.CardView>