<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_base"
            android:layout_width="150dp"
            android:layout_height="120dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/photo"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/furimuitehohoemu"/>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/description_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_base"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                tools:text="@string/les_fisika"
                style="@style/description"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/price"
                android:maxLines="1"
                style="@style/price"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/location_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_round_location_on"
                    android:contentDescription="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/location"
                    android:layout_marginStart="2dp"
                    android:maxLines="1"
                    style="@style/subtitle"
                    app:layout_constraintStart_toEndOf="@+id/iv_location"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rating_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_base">

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/review"
                    android:src="@drawable/ic_round_star"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/rating"
                    style="@style/subtitle"
                    android:maxLines="1"
                    app:layout_constraintStart_toEndOf="@id/iv_star"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/vertical_line"
                    style="@style/subtitle"
                    app:layout_constraintStart_toEndOf="@id/rating"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/review_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/review_total"
                    style="@style/subtitle"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    app:layout_constraintStart_toEndOf="@id/tv_separator"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/review"
                    style="@style/subtitle"
                    app:layout_constraintStart_toEndOf="@id/review_total"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>